codebase/compiler/src/parser/parser.rs
//! Recursive descent parser for the Gradient language.
//!
//! The parser consumes a flat stream of [`Token`]s (produced by the lexer) and
//! builds a typed AST rooted at [`Module`]. It implements error recovery so
//! that a single malformed construct does not prevent the rest of the file
//! from being parsed.
//!
//! # Entry point
//!
//! ```ignore
//! let (module, errors) = Parser::parse(tokens, file_id);
//! ```

use crate::ast::block::Block;
use crate::ast::expr::{BinOp, ClosureParam, Expr, ExprKind, MatchArm, Pattern, StringInterpPart, UnaryOp};
use crate::ast::item::{Annotation, BudgetConstraint, Contract, ContractKind, EnumVariant, ExternFnDecl, FnDef, Item, ItemKind, MessageHandler, Param, StateField, TraitMethod, TypeParam};
use crate::ast::module::{Module, ModuleDecl, UseDecl};
use crate::ast::span::{Position, Span, Spanned};
use crate::ast::stmt::{Stmt, StmtKind};
use crate::ast::types::{EffectSet, TypeExpr};
use crate::lexer::token::{InterpolationPart, Token, TokenKind};

use super::error::ParseError;

// ---------------------------------------------------------------------------
// Span helpers
// ---------------------------------------------------------------------------

/// Merge two spans to create a span covering both.
fn merge_spans(a: &Span, b: &Span) -> Span {
    a.merge(b)
}

// ---------------------------------------------------------------------------
// Parser
// ---------------------------------------------------------------------------

/// The recursive descent parser for Gradient source files.
///
/// Construct one via [`Parser::parse`], which is the only public entry point.
pub struct Parser {
    /// The flat token stream produced by the lexer.
    tokens: Vec<Token>,
    /// Current position in the token stream.
    pos: usize,
    /// Accumulated parse errors (supports error recovery).
    errors: Vec<ParseError>,
    /// The file id to stamp onto all AST spans.
    file_id: u32,
}

impl Parser {
    // -----------------------------------------------------------------------
    // Public entry point
    // -----------------------------------------------------------------------

    /// Parse a token stream into a [`Module`] AST and a list of errors.
    ///
    /// Even when errors are present the returned module will contain as much
    /// of the program as could be recovered. Callers should check
    /// `errors.is_empty()` before proceeding to later compiler phases.
    pub fn parse(tokens: Vec<Token>, file_id: u32) -> (Module, Vec<ParseError>) {
        let mut parser = Self {
            tokens,
            pos: 0,
            errors: Vec::new(),
            file_id,
        };
        let module = parser.parse_program();
        (module, parser.errors)
    }

    // -----------------------------------------------------------------------
    // Token stream helpers
    // -----------------------------------------------------------------------

    /// Peek at the current token kind without consuming it.
    fn peek(&self) -> &TokenKind {
        self.tokens
            .get(self.pos)
            .map(|t| &t.kind)
            .unwrap_or(&TokenKind::Eof)
    }

    /// Peek at the token kind `n` positions ahead without consuming.
    fn peek_ahead(&self, n: usize) -> &TokenKind {
        self.tokens
            .get(self.pos + n)
            .map(|t| &t.kind)
            .unwrap_or(&TokenKind::Eof)
    }

    /// Consume and return the current token, advancing the cursor.
    fn advance(&mut self) -> Token {
        if self.pos < self.tokens.len() {
            let tok = self.tokens[self.pos].clone();
            self.pos += 1;
            tok
        } else {
            // Synthesize an EOF token at the end.
            Token::new(
                TokenKind::Eof,
                Span::point(
                    self.file_id,
                    Position::new(0, 0, 0),
                ),
            )
        }
    }

    /// Check whether the current token matches the given kind.
    ///
    /// For token variants that carry data (`IntLit`, `Ident`, etc.) this only
    /// checks the discriminant, not the payload.
    #[allow(dead_code)]
    fn check(&self, kind: &TokenKind) -> bool {
        discriminant_eq(self.peek(), kind)
    }

    /// Return `true` when the parser has reached the end of input.
    fn at_end(&self) -> bool {
        matches!(self.peek(), TokenKind::Eof)
    }

    /// Get the AST span of the current token (without consuming it).
    fn current_span(&self) -> Span {
        if self.pos < self.tokens.len() {
            self.tokens[self.pos].span
        } else {
            Span::point(
                self.file_id,
                Position::new(0, 0, 0),
            )
        }
    }

    /// Get the AST span of the previously consumed token.
    fn prev_span(&self) -> Span {
        if self.pos > 0 {
            self.tokens[self.pos - 1].span
        } else {
            Span::point(self.file_id, Position::new(0, 0, 0))
        }
    }

    /// Consume the current token if it matches the expected kind.
    /// Returns the consumed token on success, or a [`ParseError`] on failure.
    fn expect(&mut self, kind: TokenKind) -> Result<Token, ParseError> {
        if discriminant_eq(self.peek(), &kind) {
            Ok(self.advance())
        } else {
            let err = self.error_expected(&[&format!("{}", kind)]);
            Err(err)
        }
    }

    /// Skip over any `Newline` tokens at the current position.
    fn skip_newlines(&mut self) {
        while matches!(self.peek(), TokenKind::Newline) {
            self.advance();
        }
    }

    // -----------------------------------------------------------------------
    // Error helpers
    // -----------------------------------------------------------------------

    /// Record an error at the current position with a message.
    fn error(&mut self, message: &str) -> ParseError {
        let span = self.current_span();
        let found = format!("{}", self.peek());
        let err = ParseError::new(message, span, vec![], found);
        self.errors.push(err.clone());
        err
    }

    /// Record an error at the current position listing what was expected.
    fn error_expected(&mut self, expected: &[&str]) -> ParseError {
        let span = self.current_span();
        let found = format!("{}", self.peek());
        let expected_strs: Vec<String> = expected.iter().map(|s| s.to_string()).collect();
        let message = if expected_strs.len() == 1 {
            format!("expected {}", expected_strs[0])
        } else {
            format!("expected one of: {}", expected_strs.join(", "))
        };
        let err = ParseError::new(message, span, expected_strs, found);
        self.errors.push(err.clone());
        err
    }

    /// Error recovery: skip tokens until we reach something that could
    /// plausibly start a new statement or top-level item.
    fn synchronize(&mut self) {
        loop {
            match self.peek() {
                TokenKind::Fn
                | TokenKind::Let
                | TokenKind::If
                | TokenKind::For
                | TokenKind::While
                | TokenKind::Match
                | TokenKind::Ret
                | TokenKind::Type
                | TokenKind::Actor
                | TokenKind::Trait
                | TokenKind::Impl
                | TokenKind::Mod
                | TokenKind::Use
                | TokenKind::Dedent
                | TokenKind::Eof => break,
                TokenKind::Newline => {
                    self.advance();
                    break;
                }
                _ => {
                    self.advance();
                }
            }
        }
    }

    // -----------------------------------------------------------------------
    // Program / module-level rules
    // -----------------------------------------------------------------------

    /// ```text
    /// program <- module_decl? NEWLINE* (use_decl NEWLINE+)* (top_item NEWLINE*)* EOF
    /// ```
    fn parse_program(&mut self) -> Module {
        let start_span = self.current_span();

        // Optional module declaration.
        let module_decl = if matches!(self.peek(), TokenKind::Mod) {
            let md = self.parse_module_decl();
            Some(md)
        } else {
            None
        };

        self.skip_newlines();

        // Use declarations.
        let mut uses = Vec::new();
        while matches!(self.peek(), TokenKind::Use) {
            uses.push(self.parse_use_decl());
            self.skip_newlines();
        }

        // Top-level items.
        let mut items = Vec::new();
        while !self.at_end() {
            self.skip_newlines();
            if self.at_end() {
                break;
            }
            match self.parse_top_item() {
                Some(item) => items.push(item),
                None => {
                    // Could not parse a top-level item. Skip a token and try again.
                    if !self.at_end() {
                        let before = self.pos;
                        self.error("unexpected token at top level");
                        self.synchronize();
                        // synchronize() stops at tokens like Dedent, Ret, If,
                        // For, etc. without consuming them. Those tokens are
                        // valid statement starters but cannot begin a top-level
                        // item. If synchronize made no net progress (stopped on
                        // the same token it started on), force-consume one token
                        // so the loop always moves forward.
                        if self.pos == before && !self.at_end() {
                            self.advance();
                        }
                        // Also consume any stray Dedent tokens that should not
                        // appear at the top level.
                        while matches!(self.peek(), TokenKind::Dedent) {
                            self.advance();
                        }
                    }
                }
            }
            self.skip_newlines();
        }

        let end_span = self.prev_span();
        let span = if items.is_empty() && uses.is_empty() && module_decl.is_none() {
            start_span
        } else {
            merge_spans(&start_span, &end_span)
        };

        Module {
            module_decl,
            uses,
            items,
            span,
        }
    }

    /// ```text
    /// module_decl <- 'mod' module_path NEWLINE
    /// ```
    fn parse_module_decl(&mut self) -> ModuleDecl {
        let start = self.current_span();
        self.advance(); // consume 'mod'

        let path = self.parse_module_path();

        // Consume trailing newline (optional — might be EOF).
        if matches!(self.peek(), TokenKind::Newline) {
            self.advance();
        }

        let end = self.prev_span();
        ModuleDecl {
            path,
            span: merge_spans(&start, &end),
        }
    }

    /// ```text
    /// module_path <- IDENT ('.' IDENT)*
    /// ```
    ///
    /// Only consumes `'.' IDENT` pairs — stops before a `'.'` that is not
    /// followed by an identifier (e.g. `'.{'` in selective imports).
    fn parse_module_path(&mut self) -> Vec<String> {
        let mut path = Vec::new();

        match self.peek().clone() {
            TokenKind::Ident(name) => {
                path.push(name);
                self.advance();
            }
            _ => {
                self.error_expected(&["identifier"]);
                return path;
            }
        }

        while matches!(self.peek(), TokenKind::Dot) {
            // Only consume '.' if the token after it is an identifier,
            // so we don't eat the '.' that precedes '{' in use lists.
            if !matches!(self.peek_ahead(1), TokenKind::Ident(_)) {
                break;
            }
            self.advance(); // consume '.'
            match self.peek().clone() {
                TokenKind::Ident(name) => {
                    path.push(name);
                    self.advance();
                }
                _ => unreachable!("peek_ahead check guarantees Ident"),
            }
        }

        path
    }

    /// ```text
    /// use_decl <- 'use' module_path ('.' '{' use_list '}')? NEWLINE
    /// ```
    fn parse_use_decl(&mut self) -> UseDecl {
        let start = self.current_span();
        self.advance(); // consume 'use'

        let mut path = self.parse_module_path();

        let specific_imports = if matches!(self.peek(), TokenKind::Dot) {
            // Check if the next token after '.' is '{' — that means selective import.
            if matches!(self.peek_ahead(1), TokenKind::LBrace) {
                self.advance(); // consume '.'
                self.advance(); // consume '{'
                let imports = self.parse_use_list();
                if self.expect(TokenKind::RBrace).is_err() {
                    // error already recorded
                }
                Some(imports)
            } else {
                // It's just a longer module path segment like `use std.io.more`.
                // Continue parsing as module_path components.
                while matches!(self.peek(), TokenKind::Dot) {
                    if matches!(self.peek_ahead(1), TokenKind::LBrace) {
                        self.advance(); // consume '.'
                        self.advance(); // consume '{'
                        let imports = self.parse_use_list();
                        if self.expect(TokenKind::RBrace).is_err() {
                            // error already recorded
                        }
                        return UseDecl {
                            path,
                            specific_imports: Some(imports),
                            span: merge_spans(&start, &self.prev_span()),
                        };
                    }
                    self.advance(); // consume '.'
                    match self.peek().clone() {
                        TokenKind::Ident(name) => {
                            path.push(name);
                            self.advance();
                        }
                        _ => {
                            self.error_expected(&["identifier after '.'"]);
                            break;
                        }
                    }
                }
                None
            }
        } else {
            None
        };

        // Consume trailing newline.
        if matches!(self.peek(), TokenKind::Newline) {
            self.advance();
        }

        let end = self.prev_span();
        UseDecl {
            path,
            specific_imports,
            span: merge_spans(&start, &end),
        }
    }

    /// ```text
    /// use_list <- IDENT (',' IDENT)* ','?
    /// ```
    fn parse_use_list(&mut self) -> Vec<String> {
        let mut names = Vec::new();

        match self.peek().clone() {
            TokenKind::Ident(name) => {
                names.push(name);
                self.advance();
            }
            _ => {
                self.error_expected(&["identifier in use list"]);
                return names;
            }
        }

        while matches!(self.peek(), TokenKind::Comma) {
            self.advance(); // consume ','
            // Allow trailing comma.
            if matches!(self.peek(), TokenKind::RBrace) {
                break;
            }
            match self.peek().clone() {
                TokenKind::Ident(name) => {
                    names.push(name);
                    self.advance();
                }
                _ => {
                    self.error_expected(&["identifier in use list"]);
                    break;
                }
            }
        }

        names
    }

    // -----------------------------------------------------------------------
    // Top-level items
    // -----------------------------------------------------------------------

    /// ```text
    /// top_item <- annotation* (fn_def / let_stmt / type_decl / extern_fn_decl)
    /// ```
    fn parse_top_item(&mut self) -> Option<Item> {
        let start = self.current_span();

        // Collect doc comments (/// lines) that precede this item.
        let mut doc_lines: Vec<String> = Vec::new();
        while let TokenKind::DocComment(text) = self.peek().clone() {
            doc_lines.push(text);
            self.advance();
            // Skip newlines between doc comment lines.
            self.skip_newlines();
        }
        let doc_comment = if doc_lines.is_empty() {
            None
        } else {
            Some(doc_lines.join("\n"))
        };

        // Collect annotations and budget constraints.
        let mut annotations = Vec::new();
        let mut budget: Option<BudgetConstraint> = None;
        while matches!(self.peek(), TokenKind::At) {
            // Peek ahead to detect @budget, which uses key: value syntax
            // and needs a custom parser path.
            if self.peek_budget_annotation() {
                budget = Some(self.parse_budget_annotation());
            } else {
                annotations.push(self.parse_annotation());
            }
        }

        // Check for @cap(...) as a standalone module-level capability declaration.
        // @cap is always a module-level item, never attached to a function.
        if !annotations.is_empty()
            && annotations.len() == 1
            && annotations[0].name == "cap"
        {
            let ann = &annotations[0];
            let allowed_effects: Vec<String> = ann
                .args
                .iter()
                .filter_map(|arg| {
                    if let crate::ast::expr::ExprKind::Ident(name) = &arg.node {
                        Some(name.clone())
                    } else {
                        None
                    }
                })
                .collect();
            let end = ann.span;
            return Some(Item::new(
                ItemKind::CapDecl { allowed_effects },
                merge_spans(&start, &end),
            ));
        }

        match self.peek() {
            TokenKind::Fn => {
                let item = self.parse_fn_item(annotations, budget, doc_comment);
                Some(item)
            }
            TokenKind::Let => {
                let item = self.parse_let_item(start);
                Some(item)
            }
            TokenKind::Type => {
                let item = self.parse_type_decl_with_doc(doc_comment);
                Some(item)
            }
            TokenKind::Actor => {
                let item = self.parse_actor_decl(doc_comment);
                Some(item)
            }
            TokenKind::Trait => {
                let item = self.parse_trait_decl(doc_comment);
                Some(item)
            }
            TokenKind::Impl => {
                let item = self.parse_impl_block();
                Some(item)
            }
            _ => {
                if !annotations.is_empty() {
                    self.error("annotations must be followed by a function, let, type, or actor declaration");
                }
                None
            }
        }
    }

    /// ```text
    /// annotation <- '@' IDENT ('(' annotation_args ')')? NEWLINE
    /// ```
    fn parse_annotation(&mut self) -> Annotation {
        let start = self.current_span();
        self.advance(); // consume '@'

        let name = match self.peek().clone() {
            TokenKind::Ident(name) => {
                self.advance();
                name
            }
            _ => {
                self.error_expected(&["annotation name"]);
                String::from("<error>")
            }
        };

        let args = if matches!(self.peek(), TokenKind::LParen) {
            self.advance(); // consume '('
            let mut args = Vec::new();
            if !matches!(self.peek(), TokenKind::RParen) {
                args.push(self.parse_expr());
                while matches!(self.peek(), TokenKind::Comma) {
                    self.advance();
                    if matches!(self.peek(), TokenKind::RParen) {
                        break;
                    }
                    args.push(self.parse_expr());
                }
            }
            if self.expect(TokenKind::RParen).is_err() {
                // error already recorded
            }
            args
        } else {
            Vec::new()
        };

        // Consume trailing newline.
        if matches!(self.peek(), TokenKind::Newline) {
            self.advance();
        }

        let end = self.prev_span();
        Annotation {
            name,
            args,
            span: merge_spans(&start, &end),
        }
    }

    /// Check whether the current position holds `@budget(...)`.
    fn peek_budget_annotation(&self) -> bool {
        matches!(self.peek(), TokenKind::At)
            && matches!(self.peek_ahead(1), TokenKind::Ident(n) if n == "budget")
    }

    /// Parse a `@budget(cpu: 5s, mem: 100mb)` annotation with key-value syntax.
    ///
    /// Budget annotations use `key: value` pairs rather than arbitrary
    /// expressions, so they need a dedicated parser path.
    fn parse_budget_annotation(&mut self) -> BudgetConstraint {
        let start = self.current_span();
        self.advance(); // consume '@'
        self.advance(); // consume 'budget'

        let mut cpu: Option<String> = None;
        let mut mem: Option<String> = None;

        if matches!(self.peek(), TokenKind::LParen) {
            self.advance(); // consume '('

            while !matches!(self.peek(), TokenKind::RParen | TokenKind::Eof) {
                // Parse key: value pair.
                let key = match self.peek().clone() {
                    TokenKind::Ident(name) => {
                        self.advance();
                        name
                    }
                    _ => {
                        self.error_expected(&["budget key (cpu, mem)"]);
                        break;
                    }
                };

                if self.expect(TokenKind::Colon).is_err() {
                    break;
                }

                // Parse the value: a number followed by a unit suffix (e.g. 5s, 100mb).
                // This may be an IntLit followed by an Ident, or just an Ident.
                let value = self.parse_budget_value();

                match key.as_str() {
                    "cpu" => cpu = Some(value),
                    "mem" => mem = Some(value),
                    _ => {
                        self.errors.push(super::error::ParseError::new(
                            format!("unknown budget key `{}`; valid keys are `cpu` and `mem`", key),
                            self.prev_span(),
                            vec![],
                            String::new(),
                        ));
                    }
                }

                // Consume optional comma.
                if matches!(self.peek(), TokenKind::Comma) {
                    self.advance();
                }
            }

            if self.expect(TokenKind::RParen).is_err() {
                // error already recorded
            }
        } else {
            self.errors.push(super::error::ParseError::new(
                "@budget requires parenthesized key-value pairs, e.g. @budget(cpu: 5s, mem: 100mb)",
                self.prev_span(),
                vec![],
                String::new(),
            ));
        }

        // Consume trailing newline.
        if matches!(self.peek(), TokenKind::Newline) {
            self.advance();
        }

        let end = self.prev_span();
        BudgetConstraint {
            cpu,
            mem,
            span: merge_spans(&start, &end),
        }
    }

    /// Parse a budget value like `5s`, `100mb`, `1gb`.
    ///
    /// The lexer tokenizes `5s` as `IntLit(5)` followed by `Ident("s")`,
    /// and `100mb` as `IntLit(100)` followed by `Ident("mb")`.
    fn parse_budget_value(&mut self) -> String {
        match self.peek().clone() {
            TokenKind::IntLit(n) => {
                self.advance();
                // Check for a unit suffix immediately following.
                match self.peek().clone() {
                    TokenKind::Ident(unit) => {
                        self.advance();
                        format!("{}{}", n, unit)
                    }
                    _ => {
                        // Bare number with no unit.
                        format!("{}", n)
                    }
                }
            }
            TokenKind::Ident(s) => {
                // Could be something like "unlimited" or a unit string.
                self.advance();
                s
            }
            _ => {
                self.error_expected(&["budget value (e.g. 5s, 100mb)"]);
                String::from("<error>")
            }
        }
    }

    /// Parse a function item — decides between `fn_def` and `extern_fn_decl`
    /// based on whether a body follows.
    fn parse_fn_item(&mut self, annotations: Vec<Annotation>, budget: Option<BudgetConstraint>, doc_comment: Option<String>) -> Item {
        let start = self.current_span();
        self.advance(); // consume 'fn'

        let name = match self.peek().clone() {
            TokenKind::Ident(name) => {
                self.advance();
                name
            }
            _ => {
                self.error_expected(&["function name"]);
                String::from("<error>")
            }
        };

        // Optional type parameters: `[T, U]`.
        let type_params = if matches!(self.peek(), TokenKind::LBracket) {
            self.parse_type_param_list()
        } else {
            Vec::new()
        };

        // Parameter list.
        if self.expect(TokenKind::LParen).is_err() {
            // error already recorded; try to recover
        }
        let params = if !matches!(self.peek(), TokenKind::RParen) {
            self.parse_param_list()
        } else {
            Vec::new()
        };
        if self.expect(TokenKind::RParen).is_err() {
            // error already recorded
        }

        // Optional return clause.
        let (effects, return_type) = self.parse_return_clause();

        // Separate contract annotations (@requires, @ensures), @extern, and
        // @export from regular annotations.
        // Budget annotations (@budget) are already parsed separately in parse_top_item.
        let mut contracts = Vec::new();
        let mut regular_annotations = Vec::new();
        let mut is_extern = false;
        let mut extern_lib: Option<String> = None;
        let mut is_export = false;
        let mut is_test = false;
        for ann in annotations {
            match ann.name.as_str() {
                "requires" => {
                    if let Some(cond) = ann.args.into_iter().next() {
                        contracts.push(Contract {
                            kind: ContractKind::Requires,
                            condition: cond,
                            span: ann.span,
                        });
                    } else {
                        self.errors.push(super::error::ParseError::new(
                            "@requires must have a condition expression",
                            ann.span,
                            vec![],
                            String::new(),
                        ));
                    }
                }
                "ensures" => {
                    if let Some(cond) = ann.args.into_iter().next() {
                        contracts.push(Contract {
                            kind: ContractKind::Ensures,
                            condition: cond,
                            span: ann.span,
                        });
                    } else {
                        self.errors.push(super::error::ParseError::new(
                            "@ensures must have a condition expression",
                            ann.span,
                            vec![],
                            String::new(),
                        ));
                    }
                }
                "extern" => {
                    is_extern = true;
                    // Extract optional library name: @extern("libm")
                    if let Some(arg) = ann.args.into_iter().next() {
                        if let crate::ast::expr::ExprKind::StringLit(lib) = arg.node {
                            extern_lib = Some(lib);
                        }
                    }
                }
                "export" => {
                    is_export = true;
                }
                "test" if ann.args.is_empty() => {
                    is_test = true;
                }
                _ => {
                    regular_annotations.push(ann);
                }
            }
        }

        // Decide: fn_def (has `:` NEWLINE INDENT block) vs extern_fn_decl.
        // If @extern was present, treat as extern declaration (no body).
        // If @export was present and there's a body, parse as fn_def with
        // the is_export flag set.
        if matches!(self.peek(), TokenKind::Colon) && !is_extern {
            self.advance(); // consume ':'
            // Expect NEWLINE then INDENT for block.
            if matches!(self.peek(), TokenKind::Newline) {
                self.advance();
            }
            let body = self.parse_block();
            let end = body.span;
            let fn_def = FnDef {
                name,
                type_params,
                params,
                return_type,
                effects,
                body,
                annotations: regular_annotations,
                contracts,
                budget,
                is_export,
                is_test,
                doc_comment,
            };
            Spanned::new(ItemKind::FnDef(fn_def), merge_spans(&start, &end))
        } else {
            // Extern fn declaration (no body).
            if matches!(self.peek(), TokenKind::Newline) {
                self.advance();
            }
            let end = self.prev_span();
            let decl = ExternFnDecl {
                name,
                params,
                return_type,
                effects,
                annotations: regular_annotations,
                extern_lib,
                doc_comment,
            };
            Spanned::new(ItemKind::ExternFn(decl), merge_spans(&start, &end))
        }
    }

    /// Parse a top-level `let` binding as an item.
    fn parse_let_item(&mut self, start: Span) -> Item {
        let stmt = self.parse_let_stmt_inner();
        let end = self.prev_span();
        match stmt.node {
            StmtKind::Let {
                name,
                type_ann,
                value,
                mutable,
            } => Spanned::new(
                ItemKind::Let {
                    name,
                    type_ann,
                    value,
                    mutable,
                },
                merge_spans(&start, &end),
            ),
            StmtKind::LetTupleDestructure {
                names,
                type_ann,
                value,
            } => Spanned::new(
                ItemKind::LetTupleDestructure {
                    names,
                    type_ann,
                    value,
                },
                merge_spans(&start, &end),
            ),
            _ => unreachable!("parse_let_stmt_inner always returns StmtKind::Let or StmtKind::LetTupleDestructure"),
        }
    }

    /// ```text
    /// param_list <- param (',' param)* ','?
    /// param <- IDENT ':' type_expr
    /// ```
    fn parse_param_list(&mut self) -> Vec<Param> {
        let mut params = Vec::new();

        params.push(self.parse_param());

        while matches!(self.peek(), TokenKind::Comma) {
            self.advance(); // consume ','
            // Allow trailing comma.
            if matches!(self.peek(), TokenKind::RParen) {
                break;
            }
            params.push(self.parse_param());
        }

        params
    }

    /// Parse a single parameter: `IDENT ':' type_expr`.
    /// Also handles bare `self` without a type annotation (used in impl blocks).
    fn parse_param(&mut self) -> Param {
        let start = self.current_span();

        let name = match self.peek().clone() {
            TokenKind::Ident(name) => {
                self.advance();
                name
            }
            _ => {
                self.error_expected(&["parameter name"]);
                String::from("<error>")
            }
        };

        // If the parameter is `self` and the next token is not `:`, treat it
        // as an implicit Self-typed parameter (used in trait/impl methods).
        if name == "self" && !matches!(self.peek(), TokenKind::Colon) {
            let end = self.prev_span();
            return Param {
                name,
                type_ann: Spanned::new(TypeExpr::Named("Self".to_string()), merge_spans(&start, &end)),
                span: merge_spans(&start, &end),
            };
        }

        if self.expect(TokenKind::Colon).is_err() {
            // error already recorded
        }

        let type_ann = self.parse_type_expr();
        let end = type_ann.span;

        Param {
            name,
            type_ann,
            span: merge_spans(&start, &end),
        }
    }

    /// ```text
    /// return_clause <- '->' effect_set? type_expr
    /// ```
    /// Returns `(Option<EffectSet>, Option<Spanned<TypeExpr>>)`.
    fn parse_return_clause(&mut self) -> (Option<EffectSet>, Option<Spanned<TypeExpr>>) {
        if !matches!(self.peek(), TokenKind::Arrow) {
            return (None, None);
        }
        self.advance(); // consume '->'

        // Optional effect set.
        let effects = if matches!(self.peek(), TokenKind::Bang) {
            Some(self.parse_effect_set())
        } else {
            None
        };

        let type_expr = self.parse_type_expr();
        (effects, Some(type_expr))
    }

    // -----------------------------------------------------------------------
    // Block and statements
    // -----------------------------------------------------------------------
